--- a/bootstrap-modern-business-page/partials/about.html
+++ b/bootstrap-modern-business-page/partials/about.html
@@ -18,20 +18,14 @@
     <div class="row">
 
         <div class="col-md-6">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="http://static1.squarespace.com/static/54ebaa1ee4b0360a49898565/t/55f85bfae4b06385db748417/1442339845834/?format=750w">
         </div>
         <div class="col-md-6">
-            <h2>Welcome to 'Modern Business'</h2>
+            <h2>We are Thought Farming</h2>
 
-            <p>This is a great place to introduce your company or project and describe what you do. This about page
-                features general company information, employee bios, and other helpful elements.</p>
+            <p>Customers will never love a company until the employees love it first.</p>
 
-            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats
-                vitaes nemo minima rerums unsers sadips amets.. Sed ut perspiciatis unde omnis iste natus error sit
-                voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt.</p>
+            <p>We aim to provide life changing business consultation to our customers and the tools to achieve their business goals. While doing so, we want to be the most sought out business consultants in the technology area.</p>
         </div>
 
     </div>
@@ -45,12 +39,12 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAR8AAAAJDA4NjEzMTA4LTNjNzItNGVlNS05MDgxLWU2ZmI1NjRhNzFhZA.jpg">
 
-            <h3>John Smith
-                <small>Job Title</small>
+            <h3>Shreeda Kumar
+                <small>CEO</small>
             </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
+            <p>Leads the technology and product divisions</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
                                                             data-placement="top" title="Facebook"><i
@@ -72,12 +66,12 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="https://media.licdn.com/media/AAEAAQAAAAAAAAdzAAAAJDcwNGJhYmUxLWY5NzctNGJkOS1hMmQxLWQ0MzViODc4M2E0OA.jpg" width=200 height=200>
 
-            <h3>John Smith
-                <small>Job Title</small>
+            <h3>Pallavi Bhat
+                <small>VP, Business Development</small>
             </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
+            <p>Customer evangelist</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
                                                             data-placement="top" title="Facebook"><i
@@ -99,12 +93,12 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAR8AAAAJDA4NjEzMTA4LTNjNzItNGVlNS05MDgxLWU2ZmI1NjRhNzFhZA.jpg">
 
-            <h3>John Smith
-                <small>Job Title</small>
+            <h3>Shreeda Kumar
+                <small>CEO</small>
             </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
+            <p>Another team member!</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
                                                             data-placement="top" title="Facebook"><i
@@ -126,12 +120,12 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAR8AAAAJDA4NjEzMTA4LTNjNzItNGVlNS05MDgxLWU2ZmI1NjRhNzFhZA.jpg">
 
-            <h3>John Smith
-                <small>Job Title</small>
+            <h3>Shreeda Kumar
+                <small>CEO</small>
             </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
+            <p>Another team member!</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
                                                             data-placement="top" title="Facebook"><i
@@ -153,12 +147,12 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAR8AAAAJDA4NjEzMTA4LTNjNzItNGVlNS05MDgxLWU2ZmI1NjRhNzFhZA.jpg">
 
-            <h3>John Smith
-                <small>Job Title</small>
+            <h3>Shreeda Kumar
+                <small>CEO</small>
             </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
+            <p>Another team member!</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
                                                             data-placement="top" title="Facebook"><i
@@ -180,12 +174,12 @@
         </div>
 
         <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
+            <img class="img-responsive" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAR8AAAAJDA4NjEzMTA4LTNjNzItNGVlNS05MDgxLWU2ZmI1NjRhNzFhZA.jpg">
 
-            <h3>John Smith
-                <small>Job Title</small>
+            <h3>Shreeda Kumar
+                <small>CEO</small>
             </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
+            <p>Another team member!</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
                                                             data-placement="top" title="Facebook"><i
@@ -217,27 +211,27 @@
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+            <img class="img-responsive img-customer" src="http://vignette3.wikia.nocookie.net/egamia/images/f/f3/Intel_logo.png/revision/latest?cb=20061005221757">
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+            <img class="img-responsive img-customer" src="http://www.sureewoong.com/wp-content/uploads/2013/01/apple-logo.png">
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+            <img class="img-responsive img-customer" src="https://callhub.io/wp-content/uploads/2016/06/xgoogle-logo.png.pagespeed.ic.fKK5ZfrxAI.png">
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+            <img class="img-responsive img-customer" src="https://drinkkickapoo.com/wp-content/uploads/2015/06/amazon.png">
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+            <img class="img-responsive img-customer" src="http://static1.squarespace.com/static/536703e7e4b03af4b79eaaaf/t/53a38b44e4b050cacc40902c/1403226968827/logo-walmart.png?format=500w">
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
+            <img class="img-responsive img-customer" src="http://www.inwebson.com/wp-content/uploads/2012/css3/twitter-logo.png">
         </div>
 
     </div>
