--- a/bootstrap-modern-business-page/partials/404.html
+++ b/bootstrap-modern-business-page/partials/404.html
@@ -4,8 +4,8 @@
     <!-- Page Heading/Breadcrumbs -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header"><img class="col-xs-1" src="http://vignette2.wikia.nocookie.net/videogamefanon/images/9/9e/Broken_robot.png/revision/latest?cb=20111112210541">
-                <small>Ouch!</small>
+            <h1 class="page-header"><div class="img-thumbnail" "col-md-1"><img src="http://vignette2.wikia.nocookie.net/videogamefanon/images/9/9e/Broken_robot.png/revision/latest?cb=20111112210541"></div>
+                <small>Ouch! Didn't see that coming...</small>
             </h1>
             <br>
             <ol class="breadcrumb">
