--- a/bootstrap-modern-business-page/partials/blog.html
+++ b/bootstrap-modern-business-page/partials/blog.html
@@ -26,7 +26,7 @@
                 <a href="#">Blog Post Title</a>
             </h2>
             <p class="lead">
-                by <a href="index.php">Start Bootstrap</a>
+                by <a href="#">Start Bootstrap</a>
             </p>
             <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
             <hr>
@@ -44,7 +44,7 @@
                 <a href="#">Blog Post Title</a>
             </h2>
             <p class="lead">
-                by <a href="index.php">Start Bootstrap</a>
+                by <a href="#">Start Bootstrap</a>
             </p>
             <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
             <hr>
@@ -62,7 +62,7 @@
                 <a href="#">Blog Post Title</a>
             </h2>
             <p class="lead">
-                by <a href="index.php">Start Bootstrap</a>
+                by <a href="#">Start Bootstrap</a>
             </p>
             <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
             <hr>
